--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -4,6 +4,7 @@
 >
 <head>
 	<title>Eventos app</title>
+	<!-- Materialize Imports -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <!--Import materialize.css-->
      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
@@ -44,7 +45,7 @@
 			
 		</form>
 	</div>
-	
+<!-- Materialize JS -->
 <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 </html>
